[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_main.scss
+++ b/src/styling/components/_main.scss
@@ -70,7 +70,7 @@ main {
     }
 
     .about-me-container {
-        padding: 100px 20px 200px 20px;
+        padding: 100px 20px;
 
         h2 {
             font-family: 'Inter', sans-serif;
@@ -85,6 +85,10 @@ main {
             color: $main-text-color;
             font-size: 1.2rem;
         }
+    }
+
+    .about-me-container-mobile {
+        padding: 100px 20px 200px 20px;
     }
 
     .my-projects {
